# netcollector

./: .gitignore  Dockerfile  README.md  pyproject.toml
netcollector/: commander.py  connector.py  dispatcher.py
netcollector/extras/junos_tables/: __init__.py  bgp.yml
netcollector/normalizer/: __init__.py  base.py  bgp_sessions.py  influx.py  interfaces.py  lldp_neighbors.py  vpn_sessions.py
